# costar_stack

./: .gitignore  .travis.yml  2015-11-18.rosinstall  2018_05_08.rosinstall  2018_05_09.rosinstall  CHANGELOG.rst  CMakeLists.txt  Dockerfile  INSTALL.md  LICENSE  README  README.md  Readme.md  Startup.md  costar.rosinstall  install_bullet.sh  install_costar.sh  install_indigo.sh  install_kinetic.sh  manifest.xml  package.xml  setup.py  stack.xml
costar_gripper/c_model_srvs/: CMakeLists.txt  package.xml
costar_gripper/c_model_srvs/srv/: Open.srv
costar_instructor/instructor_core/: CMakeLists.txt  manager_settings.ini  package.xml  plugin.xml  setup.py
costar_instructor/instructor_core/action/: Test.action
costar_instructor/instructor_core/launch/: core.launch  instructor.launch  namespaced_instructor.launch  snapshot.launch  standalone.launch  test_frame.launch  test_landmark.launch  testbed.launch  working_instructor.launch
costar_instructor/instructor_core/meshes/: gripper_bin.dae  gripper_bin_2.stl
costar_instructor/instructor_core/nodes/: action_client_example.py  arrow.py  diagram_scene.py  drag_and_drop.py  instructor_ar_smooth.py  instructor_force_event.py  instructor_gui.py  instructor_gui_components.py  instructor_snapshot_event.py  instructor_view.py  instructor_waypoint_manager.py  multiple_actors.py  scroll_style.py  shoulder_calibration.py  test_beetree.py  test_qt_vtk.py  test_vis.py
costar_instructor/instructor_core/srv/: GetLandmarkList.srv  GetRelativeWaypointList.srv  GetWaypointList.srv
costar_instructor/instructor_core/ui/: calibration.ui  canvas_button.ui  context.ui  dialog_form.ui  drawer.ui  drawer_2.ui  drawer_alt.ui  force_event.ui  info_button.ui  jog_buttons.ui  main_alt.ui  notifications.ui  save_dialog.ui  smart_move.ui  v2.ui  v2_action.ui  v2_event.ui  view.ui  view_2.ui  view_component_container.ui  view_list_container.ui  view_list_container_vert.ui  workspace.ui
costar_instructor/instructor_plugins/: CMakeLists.txt  package.xml
costar_instructor/instructor_plugins/srv/: GoToWaypointService.srv
costar_instructor/instructor_plugins/test/: test_service.py
costar_instructor/instructor_plugins/ui/: action_relative_waypoint.ui  action_smart_grasp.ui  action_smartmove.ui  action_waypoint.ui  action_waypoint_backup.ui  action_waypoint_mod.ui  collision.ui  home.ui  predicator_condition.ui  query.ui  relative_inner.ui  relative_inner_frame.ui  smart_move.ui  smart_move_widget.ui  wapoint_inner.ui  waypoint.ui  waypoint_inner.ui  waypoint_inner_frame.ui  waypoint_manager.ui  waypoint_manager_2.ui  waypoint_manager_tab.ui
costar_librarian/librarian_plugins/: CMakeLists.txt  package.xml
costar_perception/color_nn_segmenter/: CMakeLists.txt  README.md  package.xml
costar_perception/color_nn_segmenter/include/: color_nn_segmenter.h  utility.h
costar_perception/color_nn_segmenter/launch/: costar_segmenter.launch  segmenter.launch
costar_perception/color_nn_segmenter/src/: color_nn_segmenter.cpp  main.cpp
costar_perception/detected_object_tf_republisher/: CMakeLists.txt  package.xml
costar_perception/detected_object_tf_republisher/script/: det_obj_republisher.py
costar_perception/sp_segmenter/: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
costar_perception/sp_segmenter/launch/: SPServer.launch  SPServerStructureAssembly.launch  SPSgreyLinkNode.launch  colored_block.launch  objectDatabase.yaml  parameters.launch  segmentRegion.yaml
costar_perception/sp_segmenter/python_binding/: py_semantic_segmentation.cpp  py_sp_compact.cpp  sample_segmentation.py
costar_perception/sp_segmenter/sample_pcd_data/: segmented_sample_point_cloud.pcd
costar_perception/sp_segmenter/scripts/: republisher.py
costar_perception/sp_segmenter/src/: BBDataParser.cpp  Int_Imager.cpp  JHUDataParser.cpp  PnPUtil.cpp  Pooler_L0.cpp  TestSymmetricOrientationRealignment.cpp  UWDataParser.cpp  common.cpp  greedyObjRansac.cpp  main_classify.cpp  main_dict.cpp  main_foreground.cpp  main_foreground_test.cpp  main_gt_seg.cpp  main_hardneg.cpp  main_partial.cpp  main_ros.cpp  main_sample_semantic_segmentation.cpp  main_semantics.cpp  main_sift_test.cpp  main_sp_compact.cpp  main_sp_svm.cpp  main_sp_training.cpp  main_triple.cpp  ros_semantic_segmentation.cpp  seg.cpp  semanticSegmentation.cpp  semantic_segmentation.cpp  sp_compact.cpp  sp_segmenter_server.cpp  spatial_pose.cpp  table_segmenter.cpp
costar_perception/sp_segmenter/srv/: SPSegmenterServer.srv  segmentInGripper.srv
costar_perception/sp_segmenter/utility/: typedef.h~  utility.cpp
costar_predicator/predicator/: package.xml
costar_predicator/predicator_detected_objects/: CMakeLists.txt  package.xml  setup.py
costar_predicator/predicator_detected_objects/scripts/: detected_objects_node.py  predicator_detected_objects.py  predicator_detected_objects_node.py  test_detected_objects_node.py
costar_predicator/predicator_plugins/: CMakeLists.txt  package.xml  setup.py
costar_predicator/predicator_scene_structure/: CMakeLists.txt  package.xml  setup.py
costar_predicator/predicator_scene_structure/scripts/: scene_structure_node.py  test_scene_structure_node.py
costar_robot/: Readme.md
costar_robot/costar_robot_msgs/: CMakeLists.txt  package.xml
costar_robot/costar_robot_msgs/msg/: Constraint.msg
costar_robot/costar_robot_msgs/srv/: DoubleCommand.srv  EmptyCommand.srv  ForwardKinematics.srv  GetList.srv  LookupJointStates.srv  Object.srv  SaveFrame.srv  ServoToJointState.srv  ServoToPose.srv  SetServoMode.srv  SetTeachMode.srv  SmartMove.srv
costar_tools/costar_structure_msgs/: CMakeLists.txt  README.md  package.xml
costar_tools/costar_structure_msgs/msg/: SceneGraph.msg  StructureGraph.msg
costar_tools/moveit_collision_environment/: CMakeLists.txt  README.md  package.xml
costar_tools/moveit_collision_environment/include/: collision_env.h  planning_scene_generator.h
costar_tools/object_on_table_segmenter/: CMakeLists.txt  README.md  package.xml
costar_tools/objrec_hypothesis_msgs/: CMakeLists.txt  package.xml
predicator_plugins/: CMakeLists.txt  package.xml
(+900 files in other folders)
