<?xml version="1.0"?>
<package>
  <name>sequential_scene_parsing</name>
  <version>0.0.0</version>
  <description>The sequential_scene_parsing package</description>

  <maintainer email="FelixJonathan@todo.todo">FelixJonathan</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>costar_objrec_msgs</build_depend>
  <build_depend>objrec_hypothesis_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>